# eyedentity

./: .gitignore  README.md  clear.py  nltk.txt  package.json  pyproject.toml  requirements.txt  run.py  tests.py  watchman-trigger.json  webpack.config.js  webpack.prod.config.js
backend/: main.py  s3.py  wordclouds.py
src/: index.html
src/css/: style.css
src/js/: Dashboard.js  app.js
src/js/__tests__/: app.test.js
